--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "brfs": "^1.2.0",
     "browserify": "^5.12.1",
     "browserify-shim": "^3.7.0",
+    "delete": "^0.1.5",
     "es6ify": "^1.4.0",
     "gulp": "^3.8.8",
     "gulp-gh-pages": "^0.3.4",
     "gulp-jshint": "^1.8.5",
     "gulp-livereload": "^2.1.1",
+    "gulp-replace": "^0.4.0",
     "phaser": "^2.1.1",
     "stats-js": "^1.0.0-alpha1",
     "stripify": "^1.2.0",
